<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>be.maximvdw</groupId>
  <artifactId>MVdWUpdater</artifactId>
  <version>1.7.2-SNAPSHOT</version>
  <name>MVdW Updater</name>
  	<repositories>
		<repository>
			<id>public</id>
			<name>Public Repositories</name>
			<url>http://repo.mvdw-software.be/content/groups/public/</url>
		</repository>
		<repository>
			<id>mvdw-software</id>
			<name>Private Projects</name>
			<url>http://repo.mvdw-software.be/content/groups/private-group/</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot</artifactId>
			<version>1.9</version>
		</dependency>
        <dependency>
            <groupId>be.maximvdw</groupId>
            <artifactId>spigotsite</artifactId>
            <version>0.4.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>be.maximvdw</groupId>
            <artifactId>spigotsite-api</artifactId>
            <version>0.3.2-SNAPSHOT</version>
        </dependency>
		<dependency>
			<groupId>com.gargoylesoftware</groupId>
			<artifactId>HTMLUnit</artifactId>
			<version>2.15</version>
			<classifier>OSGi</classifier>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<build>
		<finalName>MVdWUpdater</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<finalName>MVdWUpdater</finalName>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<target>1.7</target>
					<source>1.7</source>
					<encoding>UTF-8</encoding>
					<useIncrementalCompilation>false</useIncrementalCompilation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12</version>
				<configuration>
					<junitArtifactName>junit:junit</junitArtifactName>
					<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea
						-Dfile.encoding=UTF-8</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<artifactSet>
								<includes>
									<include>be.maximvdw:spigotsite-api</include>
									<include>be.maximvdw:spigotsite</include>
								</includes>
							</artifactSet>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
							<relocations>
								<relocation>
									<pattern>be.maximvdw.spigotsite</pattern>
									<shadedPattern>be.maximvdw.mvdwupdater.spigotsite</shadedPattern>
								</relocation>
							</relocations>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.1</version>
				<configuration>
					<failOnError>false</failOnError>
					<show>public</show>
				</configuration>
				<executions>
					<execution>
						<id>aggregate</id>
						<goals>
							<goal>aggregate</goal>
						</goals>
						<phase>package</phase>
						<configuration>
							<show>public</show>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>
</project>